--- a/style.css
+++ b/style.css
@@ -787,7 +787,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #582b2b!important;
 }
 
 .btn-atomic-tangerine:hover {
