--- a/style.css
+++ b/style.css
@@ -804,11 +804,11 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #93614a!important;
 }
 
 .ltc-atomic-tangerine:hover {
-    color: #c27956!important;
+    color: #93614a!important;
 }
 
 .icon-dark-slate-blue {
